# poc_langgraph

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
src/: controller.py  filesystem.py  main.py
src/agent/: __init__.py  graph.py  manager.py  runner.py
src/agent/nodes/: __init__.py  chat_nodes.py
src/agent/tools/: __init__.py  fs_tools.py
src/ui/: renderer.py
tests/filesystem/: mcp_fs_test.py
tests/filesystem/test_dirs/: arm_sme.h  arm_sve.h  test_write_file.cpp
tests/tools/filesystem/: test_fs_tools.py
