[project]
name = "poc-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "mcp>=1.13.1",
    "prompt-toolkit>=3.0.51",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
]
